# lacecore

./: .gitmodules  CHANGELOG.md  README.md  bootstrap.zsh  dev.py  netlify.toml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_doc.txt  requirements_obj.txt  setup.py
.circleci/: config.yml
.github/workflows/: codeql.yml  main.yml
.github/workflows/common/: action.yml
doc/: conf.py  index.md
examples/models/: source.md
lacecore/: __init__.py  _group_map.py  _mesh.py  _obj.py  _selection.py  test_group_map.py  test_mesh.py  test_obj.py  test_selection.py
lacecore/_analysis/: analysis_mixin.py  test_analysis_mixin.py
lacecore/_cli/: convert_units.py  test_convert_units.py
lacecore/_common/: reindexing.py  test_reindexing.py  test_validation.py  validation.py
lacecore/_obj/: extract_groups.py  loader.py  test_loader.py  test_writer.py  writer.py
lacecore/_selection/: CHANGELOG.md  selection_mixin.py  selection_object.py  test_reconcile_selection.py  test_selection_mixin.py  test_selection_object.py
lacecore/_transform/: test_transform_mixin.py  transform_mixin.py  transform_object.py
lacecore/shapes/: _shapes.py  test_shapes.py
