[tool.poetry]
name = "lacecore"
version = "3.0.0a3"
description = "Polygonal meshes optimized for cloud computation"
authors = ["Paul Melnikow <github@paulmelnikow.com>", "Metabolize, Minnow Software, Body Labs, and other contributors"]
license = "BSD-2-Clause"
include = ["CHANGELOG.md"]
exclude = ["**/test_*.py"]
homepage = "https://github.com/lace/lacecore"
repository = "https://github.com/lace/lacecore"
documentation = "https://lacecore.readthedocs.io/en/stable/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
convert_units = "lacecore_cli.convert_units:convert_units"

[tool.poetry.dependencies]
python = ">=3.10,<4"
click = {version = ">=8.1.3,<9", optional = true}
numpy = "*"
ounce = ">=1.1.0,<2.0"
polliwog = ">=3.0.0a3"
# polliwog = {git = "https://github.com/lace/polliwog.git", branch = "slice-mapping"}
tinymetabobjloader = {version = "2.0.0rc14.dev2", optional = true}
vg = ">=2.0.0"
black = {version = "23.3.0", optional = true}
coverage = {version = "7.2.7", optional = true}
executor = {version = "23.2", optional = true}
flake8 = {version = "5.0.4", optional = true}
flake8-import-order = {version = "0.18.2", optional = true}
myst-parser = {version = "4.0.1", optional = true}
pytest = {version = "7.4.2", optional = true}
pytest-cov = {version = "4.1.0", optional = true}
setuptools = {version = "68.0.0", optional = true}
Sphinx = {version = "8.1.3", optional = true}
sphinxcontrib-apidoc = {version = "0.6.0", optional = true}

[tool.poetry.extras]
cli = ["click", "tinymetabobjloader"]
obj = ["tinymetabobjloader"]
doc = ["executor", "click", "sphinx", "sphinxcontrib-apidoc", "myst-parser"]
lint = ["executor", "click", "setuptools", "flake8", "flake8-import-order"]
format = ["executor", "click", "black"]
test = ["executor", "click", "pytest", "pytest-cov", "executor", "coverage"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 100.0
omit = ["**/test_*.py"]
